fix: commit link and github button on mobile

--- a/de.marianzeis.ui5libdiff/webapp/css/style.css
+++ b/de.marianzeis.ui5libdiff/webapp/css/style.css
@@ -8,6 +8,11 @@
     transition: all 0.2s ease;  /* Smooth transition for hover effects */
 }
 
+.commitText {
+    white-space: normal;
+    word-wrap: break-word;  /* or overflow-wrap: anywhere; in modern browsers */
+  }
+
 .commitLink:hover {
     text-decoration: underline !important;
     color: #0854a0 !important;
